Simplified.